--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-app",
   "private": true,
   "scripts": {
-    "build": "NITRO_PRESET=aws-lambda nuxt build",
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^0.3.3",
+    "@types/aws-lambda": "^8.10.119",
     "@types/node": "^18",
     "nuxt": "^3.5.2"
   }
