--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.13.2",
+    "@tsconfig/node18": "^18.2.2",
     "aws-cdk-lib": "2.79.1",
     "constructs": "10.1.156",
-    "typescript": "^5.1.3",
-    "@tsconfig/node16": "^1.0.4"
+    "sst": "^2.13.2",
+    "typescript": "^5.1.3"
   }
 }
